Compability issue facebook ,overflow hidden

--- a/src/styles/Projects/Projects.scss
+++ b/src/styles/Projects/Projects.scss
@@ -34,6 +34,9 @@
         border: 2px solid v.$pastel-yellow;
         height: v.$project-card-height-mobile;
 
+        //added because facebook compability issues
+        overflow: hidden;
+
         &:hover {
           border: 2px solid v.$yellow;
         }
